@@ -2,6 +2,7 @@ Revision history for perl distribution Convos
 
 6.31 Not Released
  - Fix turning channel names with "-" into links
+ - Have to build a different tag for arm64 (for now) #464
 
 6.30 2021-09-25T18:30:00+0900
  - Fix not making links inside links when #fragments are seen
